--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 exceptiongroup==1.2.0
 fastapi==0.108.0
+greenlet==3.0.3
 h11==0.14.0
 idna==3.6
 iniconfig==2.0.0
@@ -17,10 +18,12 @@ pydantic-core==2.14.6
 pysolr==3.9.0
 pytest==7.4.3
 python-dateutil==2.8.2
+python-multipart==0.0.6
 pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.23
 starlette==0.32.0.post1
 tomli==2.0.1
 typing-extensions==4.9.0
